Few more test cases